@@ -688,6 +688,8 @@ CREATE TABLE history_log (
   itemid		int(4)		DEFAULT '0' NOT NULL,
   clock			int(4)		DEFAULT '0' NOT NULL,
   timestamp		int(4)		DEFAULT '0' NOT NULL,
+  source		varchar(64)	DEFAULT '' NOT NULL,
+  severity		int(4)		DEFAULT '0' NOT NULL,
   value			varchar(255)	DEFAULT '' NOT NULL,
   PRIMARY KEY (id),
   KEY itemidclock (itemid, clock)
